[package]
name = "ribozyme"
version = "0.3.0"
authors = ["Boomber <boomberisalreadytaken@gmail.com>"]
edition = "2018"
description = "Catalyst for merging resourcepacks"
homepage = "https://github.com/oOBoomberOo/ribozyme"
repository = "https://github.com/oOBoomberOo/ribozyme"
readme = "README.md"
keywords = ["resourcepack", "merger", "ribozyme", "minecraft"]
categories = ["command-line-utilities"]
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
colored = "1.9.3"
serde_json = "1.0.51"
serde = { version = "1.0.106", features = ["derive"] }
rayon = "1.3.0"
structopt = "0.3.13"
crossterm = "0.17.3"
tui = "0.9.1"
anyhow = "1.0.28"
itertools = "0.9.0"