[package]
name = "ribozyme"
version = "0.4.0"
authors = ["Boomber <boomberisalreadytaken@gmail.com>"]
edition = "2018"
description = "Catalyst for merging resourcepacks"
homepage = "https://github.com/oOBoomberOo/ribozyme"
repository = "https://github.com/oOBoomberOo/ribozyme"
readme = "README.md"
keywords = ["resourcepack", "merger", "ribozyme", "minecraft"]
categories = ["command-line-utilities"]
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
colored = "2.0.0"
serde_json = "1.0.56"
serde = { version = "1.0.114", features = ["derive"] }
structopt = "0.3.15"
anyhow = "1.0.31"
thiserror = "1.0.20"
superfusion = { git = "https://github.com/oOBoomberOo/fusion.git" }
walkdir = "2.3.1"
log = "0.4.8"
lazy_static = "1.4.0"
glob = "0.3.0"
nom = "5.1.2"
env_logger = "0.7.1"
